--- a/resources/css/mitabla.css
+++ b/resources/css/mitabla.css
@@ -1,14 +1,15 @@
 #mitabla {
-    /*font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;*/
-    font-family: "Arial", Arial, Arial, arial;
-    font-size: 10px;
+    
     border-collapse: collapse;
     width: 100%;
 }
 
-#mitabla td, #mitabla th {
+#mitabla td {
+    font-family: "Arial", Arial, Arial, arial;
     border: 1px solid #ddd;
-    padding: 8px;
+    font-size: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     
 }
 
@@ -17,8 +18,10 @@
 #mitabla tr:hover {background-color: #ddd;}
 
 #mitabla th {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-family: "Arial", Arial, Arial, arial;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border: 1px solid #ddd;
     text-align: center;
     background-color: #3c8dbc;
     color: white;
